edited backtest to include PRE_PAIR_FORMATION

--- a/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
+++ b/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,10 @@
       "------------------------------------------------------------------\n",
       "Running 7/8\n",
       "Backtesting all pairs using parameters (40, 2, 0.5, -0.005)\n",
-      "---------"
+      "------------------------------------------------------------------\n",
+      "Running 8/8\n",
+      "Backtesting all pairs using parameters (40, 2, 0.5, -0.01)\n",
+      "------------------------------------------------------------------\n"
      ]
     }
    ],
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +401,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.005</td>\n",
-       "      <td>0.058194</td>\n",
-       "      <td>0.127321</td>\n",
-       "      <td>0.068545</td>\n",
-       "      <td>0.049401</td>\n",
-       "      <td>0.335526</td>\n",
-       "      <td>43186e5c-9839-4ce1-b55d-89a9fdf0ef15</td>\n",
+       "      <td>-0.322395</td>\n",
+       "      <td>0.007451</td>\n",
+       "      <td>0.024171</td>\n",
+       "      <td>0.006715</td>\n",
+       "      <td>0.246193</td>\n",
+       "      <td>bf190dac-d8cb-4dc7-808b-07b7bf9ae82e</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -411,12 +414,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.010</td>\n",
-       "      <td>0.014154</td>\n",
-       "      <td>-0.017092</td>\n",
-       "      <td>0.034305</td>\n",
-       "      <td>0.006459</td>\n",
-       "      <td>0.260582</td>\n",
-       "      <td>4343378b-41d0-499e-b36d-4424984069ca</td>\n",
+       "      <td>-0.364533</td>\n",
+       "      <td>-0.184471</td>\n",
+       "      <td>0.015625</td>\n",
+       "      <td>-0.033238</td>\n",
+       "      <td>0.261770</td>\n",
+       "      <td>9fc74b19-8eae-47c8-a05c-87b157082743</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -424,12 +427,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.005</td>\n",
-       "      <td>0.023484</td>\n",
-       "      <td>0.042991</td>\n",
-       "      <td>0.061434</td>\n",
-       "      <td>0.002937</td>\n",
-       "      <td>0.339248</td>\n",
-       "      <td>79348d3a-287e-4305-b893-94d32d891a43</td>\n",
+       "      <td>-0.175588</td>\n",
+       "      <td>-0.035411</td>\n",
+       "      <td>0.003829</td>\n",
+       "      <td>-0.000166</td>\n",
+       "      <td>0.198682</td>\n",
+       "      <td>ec5924e0-e2d0-4248-b2e5-d15dca4e0b35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -437,12 +440,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.010</td>\n",
-       "      <td>-0.139887</td>\n",
-       "      <td>-0.019956</td>\n",
-       "      <td>0.013087</td>\n",
-       "      <td>0.010515</td>\n",
-       "      <td>0.255194</td>\n",
-       "      <td>707268d8-b5c4-4c90-bf42-d5619491afb5</td>\n",
+       "      <td>-0.239191</td>\n",
+       "      <td>-0.131862</td>\n",
+       "      <td>-0.002943</td>\n",
+       "      <td>-0.010088</td>\n",
+       "      <td>0.244194</td>\n",
+       "      <td>a32ec336-59a7-4b8e-92de-3d93946f4c61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -450,12 +453,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.005</td>\n",
-       "      <td>-0.190785</td>\n",
-       "      <td>-0.065687</td>\n",
-       "      <td>0.008224</td>\n",
-       "      <td>-0.012850</td>\n",
-       "      <td>0.316426</td>\n",
-       "      <td>101f87a3-3db2-4819-b05f-0433785f1e58</td>\n",
+       "      <td>-0.319687</td>\n",
+       "      <td>-0.215534</td>\n",
+       "      <td>-0.007416</td>\n",
+       "      <td>-0.035522</td>\n",
+       "      <td>0.224277</td>\n",
+       "      <td>9ff7d543-b135-4f3e-95b8-4ca06b4d15a6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -463,12 +466,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.010</td>\n",
-       "      <td>-0.225997</td>\n",
-       "      <td>-0.141681</td>\n",
-       "      <td>-0.010567</td>\n",
-       "      <td>-0.023955</td>\n",
-       "      <td>0.237302</td>\n",
-       "      <td>6ae559be-0276-4d26-9b78-fdf74ebbe12c</td>\n",
+       "      <td>-0.305402</td>\n",
+       "      <td>-0.153974</td>\n",
+       "      <td>-0.018321</td>\n",
+       "      <td>-0.049383</td>\n",
+       "      <td>0.256443</td>\n",
+       "      <td>25d00332-e037-4878-8e5b-25bfebc4b7e3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -476,12 +479,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.005</td>\n",
-       "      <td>-0.030753</td>\n",
-       "      <td>-0.067873</td>\n",
-       "      <td>-0.018242</td>\n",
-       "      <td>-0.011428</td>\n",
-       "      <td>0.254901</td>\n",
-       "      <td>463c399b-ec5b-426e-b9c6-db96e4e74711</td>\n",
+       "      <td>-0.206751</td>\n",
+       "      <td>-0.187176</td>\n",
+       "      <td>-0.021241</td>\n",
+       "      <td>-0.028624</td>\n",
+       "      <td>0.245672</td>\n",
+       "      <td>93dc7890-d80f-4e08-9259-a2818d118c1c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -489,12 +492,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.010</td>\n",
-       "      <td>-0.356868</td>\n",
-       "      <td>-0.128158</td>\n",
-       "      <td>-0.020525</td>\n",
-       "      <td>-0.028023</td>\n",
-       "      <td>0.213141</td>\n",
-       "      <td>155d8706-7bd8-4f69-ace5-c9ab75798eb0</td>\n",
+       "      <td>-0.387697</td>\n",
+       "      <td>-0.164976</td>\n",
+       "      <td>-0.016503</td>\n",
+       "      <td>-0.027301</td>\n",
+       "      <td>0.248869</td>\n",
+       "      <td>5de8c2c6-9653-4b6d-83cc-5e1cc4fd45b1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -512,37 +515,37 @@
        "7        40                     2                  0.5      -0.010   \n",
        "\n",
        "   avg_sharpe_ratio  median_sharpe_ratio  avg_overall_return  \\\n",
-       "0          0.058194             0.127321            0.068545   \n",
-       "1          0.014154            -0.017092            0.034305   \n",
-       "2          0.023484             0.042991            0.061434   \n",
-       "3         -0.139887            -0.019956            0.013087   \n",
-       "4         -0.190785            -0.065687            0.008224   \n",
-       "5         -0.225997            -0.141681           -0.010567   \n",
-       "6         -0.030753            -0.067873           -0.018242   \n",
-       "7         -0.356868            -0.128158           -0.020525   \n",
+       "0         -0.322395             0.007451            0.024171   \n",
+       "1         -0.364533            -0.184471            0.015625   \n",
+       "2         -0.175588            -0.035411            0.003829   \n",
+       "3         -0.239191            -0.131862           -0.002943   \n",
+       "4         -0.319687            -0.215534           -0.007416   \n",
+       "5         -0.305402            -0.153974           -0.018321   \n",
+       "6         -0.206751            -0.187176           -0.021241   \n",
+       "7         -0.387697            -0.164976           -0.016503   \n",
        "\n",
        "   median_overall_return  overall_return_std  \\\n",
-       "0               0.049401            0.335526   \n",
-       "1               0.006459            0.260582   \n",
-       "2               0.002937            0.339248   \n",
-       "3               0.010515            0.255194   \n",
-       "4              -0.012850            0.316426   \n",
-       "5              -0.023955            0.237302   \n",
-       "6              -0.011428            0.254901   \n",
-       "7              -0.028023            0.213141   \n",
+       "0               0.006715            0.246193   \n",
+       "1              -0.033238            0.261770   \n",
+       "2              -0.000166            0.198682   \n",
+       "3              -0.010088            0.244194   \n",
+       "4              -0.035522            0.224277   \n",
+       "5              -0.049383            0.256443   \n",
+       "6              -0.028624            0.245672   \n",
+       "7              -0.027301            0.248869   \n",
        "\n",
        "                                   uuid  \n",
-       "0  43186e5c-9839-4ce1-b55d-89a9fdf0ef15  \n",
-       "1  4343378b-41d0-499e-b36d-4424984069ca  \n",
-       "2  79348d3a-287e-4305-b893-94d32d891a43  \n",
-       "3  707268d8-b5c4-4c90-bf42-d5619491afb5  \n",
-       "4  101f87a3-3db2-4819-b05f-0433785f1e58  \n",
-       "5  6ae559be-0276-4d26-9b78-fdf74ebbe12c  \n",
-       "6  463c399b-ec5b-426e-b9c6-db96e4e74711  \n",
-       "7  155d8706-7bd8-4f69-ace5-c9ab75798eb0  "
+       "0  bf190dac-d8cb-4dc7-808b-07b7bf9ae82e  \n",
+       "1  9fc74b19-8eae-47c8-a05c-87b157082743  \n",
+       "2  ec5924e0-e2d0-4248-b2e5-d15dca4e0b35  \n",
+       "3  a32ec336-59a7-4b8e-92de-3d93946f4c61  \n",
+       "4  9ff7d543-b135-4f3e-95b8-4ca06b4d15a6  \n",
+       "5  25d00332-e037-4878-8e5b-25bfebc4b7e3  \n",
+       "6  93dc7890-d80f-4e08-9259-a2818d118c1c  \n",
+       "7  5de8c2c6-9653-4b6d-83cc-5e1cc4fd45b1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -597,12 +600,12 @@
        "      <td>2</td>\n",
        "      <td>0.5</td>\n",
        "      <td>-0.005</td>\n",
-       "      <td>0.058194</td>\n",
-       "      <td>0.127321</td>\n",
-       "      <td>0.068545</td>\n",
-       "      <td>0.049401</td>\n",
-       "      <td>0.335526</td>\n",
-       "      <td>43186e5c-9839-4ce1-b55d-89a9fdf0ef15</td>\n",
+       "      <td>-0.322395</td>\n",
+       "      <td>0.007451</td>\n",
+       "      <td>0.024171</td>\n",
+       "      <td>0.006715</td>\n",
+       "      <td>0.246193</td>\n",
+       "      <td>bf190dac-d8cb-4dc7-808b-07b7bf9ae82e</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -613,16 +616,16 @@
        "0        20                     2                  0.5      -0.005   \n",
        "\n",
        "   avg_sharpe_ratio  median_sharpe_ratio  avg_overall_return  \\\n",
-       "0          0.058194             0.127321            0.068545   \n",
+       "0         -0.322395             0.007451            0.024171   \n",
        "\n",
        "   median_overall_return  overall_return_std  \\\n",
-       "0               0.049401            0.335526   \n",
+       "0               0.006715            0.246193   \n",
        "\n",
        "                                   uuid  \n",
-       "0  43186e5c-9839-4ce1-b55d-89a9fdf0ef15  "
+       "0  bf190dac-d8cb-4dc7-808b-07b7bf9ae82e  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,8 +678,8 @@
     "def backtest_single_pair(_stk0, _stk1, _lookback, _enter_threshold_size, _exit_threshold_size, _loss_limit):\n",
     "    # get data of both stock\n",
     "    stk0_df, stk1_df = data[_stk0], data[_stk1]\n",
-    "    stk0_df_test = stk0_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
-    "    stk1_df_test = stk1_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "    stk0_df_test = stk0_df[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN : PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "    stk1_df_test = stk1_df[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN : PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
     "\n",
     "    # Create a cerebro\n",
     "    cerebro = bt.Cerebro()\n",
