--- a/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
+++ b/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
@@ -43,7 +43,7 @@
     "PAIR_FORMATION_LEN = 60\n",
     "\n",
     "# top PCT percentage of the pairs with lowest distance will be backtested\n",
-    "PCT = 1.0\n",
+    "PCT = 0.01\n",
     "\n",
     "# STRATEGY PARAMETERS\n",
     "LOOKBACK_VALUE = [20, 30, 40, 45]\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
       "Backtest start date: 2016-03-18 00:00:00\n",
       "Backtest end date: 2018-03-13 00:00:00\n",
       "No null values detected in aggregated close price df.\n",
-      "From 6670 pairs, 360 pairs passed the cointegration test.\n",
+      "From 6670 pairs, 66 pairs passed the cointegration test.\n",
       "---------------------------------------------------------------------\n"
      ]
     }
@@ -186,7 +186,25 @@
      "text": [
       "Running 1/24\n",
       "Backtesting all pairs using parameters (20, 2, 0.5, -0.005)\n",
-      "----------------------------------------------------"
+      "------------------------------------------------------------------\n",
+      "Running 2/24\n",
+      "Backtesting all pairs using parameters (20, 2, 0.5, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 3/24\n",
+      "Backtesting all pairs using parameters (20, 2, 0.5, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 4/24\n",
+      "Backtesting all pairs using parameters (20, 3, 0.5, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 5/24\n",
+      "Backtesting all pairs using parameters (20, 3, 0.5, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 6/24\n",
+      "Backtesting all pairs using parameters (20, 3, 0.5, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 7/24\n",
+      "Backtesting all pairs using parameters (30, 2, 0.5, -0.005)\n",
+      "----------------------------"
      ]
     }
    ],
