edited grid search codes

--- a/jupyter-py/5d-Cointegration-Kalman-Grid-Search.ipynb
+++ b/jupyter-py/5d-Cointegration-Kalman-Grid-Search.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from grid_search_tools import GSTools\n",
     "from ptstrategy_cointegration_kalman import CointKalmanStrategy\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +46,19 @@
     "DIR = \"../ib-data/nyse-daily-tech/\"\n",
     "\n",
     "BT_START_DT = '2016-03-18'\n",
-    "TEST_PERIOD = 500\n",
+    "TEST_PERIOD = 200\n",
     "\n",
-    "PRE_PAIR_FORMATION = 252 + 52 - 60 - 45\n",
+    "PRE_PAIR_FORMATION = 252 + 52 - 60 - 40\n",
     "PAIR_FORMATION_LEN = 60\n",
     "\n",
     "# top PCT percentage of the pairs with lowest distance will be backtested\n",
     "PCT = 0.01\n",
     "\n",
     "# STRATEGY PARAMETERS\n",
-    "ENTER_THRESHOLD_SIZE = [0.5, 0.6, 0.7]\n",
-    "EXIT_THRESHOLD_SIZE = [0.25, 0.3]\n",
-    "LOSS_LIMIT = [-0.01, -0.015]\n",
-    "MAX_LOOKBACK = 45\n",
+    "ENTER_THRESHOLD_SIZE = [0.5, 0.6, 0.8, 1.2, 2.0]\n",
+    "EXIT_THRESHOLD_SIZE = [0.25, 0.3, 0.4]\n",
+    "LOSS_LIMIT = [-0.005, -0.01, -0.015]\n",
+    "MAX_LOOKBACK = 40\n",
     "CONSIDER_BORROW_COST = False\n",
     "CONSIDER_COMMISSION = True\n",
     "\n",
@@ -57,12 +66,12 @@
     "OTHER_INFO = \"Added alpha > 0 conditions\"\n",
     "\n",
     "# Where to save the ouputs\n",
-    "DST_DIR = \"../backtest-results/cointegration-kalman/progress-report-v3/\""
+    "DST_DIR = \"../backtest-results/cointegration-kalman/fyp-progress-y1/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
       "To fulfill BT_START_DT, PAIR_FORMATION_LEN and MAX_LOOKBACK, size = 1009.\n",
       "After cutting datafeeds, 116 datafeeds remaining.\n",
       "Backtest start date: 2016-03-18 00:00:00\n",
-      "Backtest end date: 2018-03-13 00:00:00\n",
+      "Backtest end date: 2016-12-30 00:00:00\n",
       "No null values detected in aggregated close price df.\n",
       "From 6670 pairs, 66 pairs passed the cointegration test.\n",
       "---------------------------------------------------------------------\n"
@@ -174,49 +183,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running 1/12\n",
+      "Running 1/45\n",
+      "Backtesting all pairs using parameters (0.5, 0.25, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 2/45\n",
       "Backtesting all pairs using parameters (0.5, 0.25, -0.01)\n",
       "------------------------------------------------------------------\n",
-      "Running 2/12\n",
+      "Running 3/45\n",
       "Backtesting all pairs using parameters (0.5, 0.25, -0.015)\n",
       "------------------------------------------------------------------\n",
-      "Running 3/12\n",
+      "Running 4/45\n",
+      "Backtesting all pairs using parameters (0.5, 0.3, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 5/45\n",
       "Backtesting all pairs using parameters (0.5, 0.3, -0.01)\n",
       "------------------------------------------------------------------\n",
-      "Running 4/12\n",
+      "Running 6/45\n",
       "Backtesting all pairs using parameters (0.5, 0.3, -0.015)\n",
       "------------------------------------------------------------------\n",
-      "Running 5/12\n",
+      "Running 7/45\n",
+      "Backtesting all pairs using parameters (0.5, 0.4, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 8/45\n",
+      "Backtesting all pairs using parameters (0.5, 0.4, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 9/45\n",
+      "Backtesting all pairs using parameters (0.5, 0.4, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 10/45\n",
+      "Backtesting all pairs using parameters (0.6, 0.25, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 11/45\n",
       "Backtesting all pairs using parameters (0.6, 0.25, -0.01)\n",
       "------------------------------------------------------------------\n",
-      "Running 6/12\n",
+      "Running 12/45\n",
       "Backtesting all pairs using parameters (0.6, 0.25, -0.015)\n",
       "------------------------------------------------------------------\n",
-      "Running 7/12\n",
+      "Running 13/45\n",
+      "Backtesting all pairs using parameters (0.6, 0.3, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 14/45\n",
       "Backtesting all pairs using parameters (0.6, 0.3, -0.01)\n",
       "------------------------------------------------------------------\n",
-      "Running 8/12\n",
+      "Running 15/45\n",
       "Backtesting all pairs using parameters (0.6, 0.3, -0.015)\n",
       "------------------------------------------------------------------\n",
-      "Running 9/12\n",
-      "Backtesting all pairs using parameters (0.7, 0.25, -0.01)\n",
+      "Running 16/45\n",
+      "Backtesting all pairs using parameters (0.6, 0.4, -0.005)\n",
       "------------------------------------------------------------------\n",
-      "Running 10/12\n",
-      "Backtesting all pairs using parameters (0.7, 0.25, -0.015)\n",
+      "Running 17/45\n",
+      "Backtesting all pairs using parameters (0.6, 0.4, -0.01)\n",
       "------------------------------------------------------------------\n",
-      "Running 11/12\n",
-      "Backtesting all pairs using parameters (0.7, 0.3, -0.01)\n",
+      "Running 18/45\n",
+      "Backtesting all pairs using parameters (0.6, 0.4, -0.015)\n",
       "------------------------------------------------------------------\n",
-      "Running 12/12\n",
-      "Backtesting all pairs using parameters (0.7, 0.3, -0.015)\n",
-      "------------------------------------------------------------------\n"
+      "Running 19/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.25, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 20/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.25, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 21/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.25, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 22/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.3, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 23/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.3, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 24/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.3, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 25/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.4, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 26/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.4, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 27/45\n",
+      "Backtesting all pairs using parameters (0.8, 0.4, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 28/45\n",
+      "Backtesting all pairs using parameters (1.2, 0.25, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 29/45\n",
+      "Backtesting all pairs using parameters (1.2, 0.25, -0.01)\n",
+      "------------------------------------------------------------------\n",
+      "Running 30/45\n",
+      "Backtesting all pairs using parameters (1.2, 0.25, -0.015)\n",
+      "------------------------------------------------------------------\n",
+      "Running 31/45\n",
+      "Backtesting all pairs using parameters (1.2, 0.3, -0.005)\n",
+      "------------------------------------------------------------------\n",
+      "Running 32/45\n",
+      "Backtesting all pairs using parameters (1.2, 0.3, -0.01)\n",
+      "----------------------------------"
      ]
     }
    ],
@@ -572,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.054320155000000266"
+       "0.03226834499999957"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
