added log-helper, edited grid search

--- a/jupyter-py/5d-Cointegration-Kalman-Grid-Search.ipynb
+++ b/jupyter-py/5d-Cointegration-Kalman-Grid-Search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +179,269 @@
     "print(\"From \" + str(int(N * (N-1) / 2)) + \" pairs, \" + str(len(good_pairs)) + \" pairs passed the cointegration test.\")\n",
     "\n",
     "print(\"---------------------------------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAN</th>\n",
+       "      <th>AER</th>\n",
+       "      <th>AL</th>\n",
+       "      <th>AMBR</th>\n",
+       "      <th>AMN</th>\n",
+       "      <th>ANET</th>\n",
+       "      <th>ASGN</th>\n",
+       "      <th>ATEN</th>\n",
+       "      <th>ATHM</th>\n",
+       "      <th>ATU</th>\n",
+       "      <th>...</th>\n",
+       "      <th>UIS</th>\n",
+       "      <th>UMC</th>\n",
+       "      <th>URI</th>\n",
+       "      <th>VEEV</th>\n",
+       "      <th>VMW</th>\n",
+       "      <th>WIT</th>\n",
+       "      <th>WK</th>\n",
+       "      <th>WUBA</th>\n",
+       "      <th>XRX</th>\n",
+       "      <th>ZEN</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02</th>\n",
+       "      <td>30.615</td>\n",
+       "      <td>38.515</td>\n",
+       "      <td>34.380</td>\n",
+       "      <td>10.155</td>\n",
+       "      <td>19.225</td>\n",
+       "      <td>62.655</td>\n",
+       "      <td>32.505</td>\n",
+       "      <td>4.535</td>\n",
+       "      <td>37.755</td>\n",
+       "      <td>27.155</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.895</td>\n",
+       "      <td>2.245</td>\n",
+       "      <td>103.585</td>\n",
+       "      <td>26.205</td>\n",
+       "      <td>82.075</td>\n",
+       "      <td>11.345</td>\n",
+       "      <td>13.585</td>\n",
+       "      <td>41.915</td>\n",
+       "      <td>36.2350</td>\n",
+       "      <td>24.540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05</th>\n",
+       "      <td>30.505</td>\n",
+       "      <td>38.255</td>\n",
+       "      <td>33.475</td>\n",
+       "      <td>10.010</td>\n",
+       "      <td>18.925</td>\n",
+       "      <td>63.835</td>\n",
+       "      <td>31.990</td>\n",
+       "      <td>4.370</td>\n",
+       "      <td>37.040</td>\n",
+       "      <td>26.275</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.095</td>\n",
+       "      <td>2.295</td>\n",
+       "      <td>92.245</td>\n",
+       "      <td>26.220</td>\n",
+       "      <td>81.010</td>\n",
+       "      <td>11.205</td>\n",
+       "      <td>13.990</td>\n",
+       "      <td>42.510</td>\n",
+       "      <td>35.4725</td>\n",
+       "      <td>24.055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-06</th>\n",
+       "      <td>29.335</td>\n",
+       "      <td>38.235</td>\n",
+       "      <td>33.505</td>\n",
+       "      <td>10.070</td>\n",
+       "      <td>18.435</td>\n",
+       "      <td>63.790</td>\n",
+       "      <td>31.275</td>\n",
+       "      <td>4.565</td>\n",
+       "      <td>35.905</td>\n",
+       "      <td>25.745</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.055</td>\n",
+       "      <td>2.235</td>\n",
+       "      <td>89.375</td>\n",
+       "      <td>27.125</td>\n",
+       "      <td>78.815</td>\n",
+       "      <td>11.035</td>\n",
+       "      <td>13.955</td>\n",
+       "      <td>40.585</td>\n",
+       "      <td>34.9450</td>\n",
+       "      <td>24.530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-07</th>\n",
+       "      <td>30.245</td>\n",
+       "      <td>38.605</td>\n",
+       "      <td>33.445</td>\n",
+       "      <td>9.835</td>\n",
+       "      <td>18.640</td>\n",
+       "      <td>65.110</td>\n",
+       "      <td>32.105</td>\n",
+       "      <td>4.565</td>\n",
+       "      <td>38.890</td>\n",
+       "      <td>25.285</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.335</td>\n",
+       "      <td>2.265</td>\n",
+       "      <td>88.735</td>\n",
+       "      <td>27.180</td>\n",
+       "      <td>78.835</td>\n",
+       "      <td>11.165</td>\n",
+       "      <td>14.230</td>\n",
+       "      <td>40.480</td>\n",
+       "      <td>35.3925</td>\n",
+       "      <td>24.520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-08</th>\n",
+       "      <td>30.755</td>\n",
+       "      <td>39.525</td>\n",
+       "      <td>34.180</td>\n",
+       "      <td>9.955</td>\n",
+       "      <td>18.535</td>\n",
+       "      <td>66.070</td>\n",
+       "      <td>32.615</td>\n",
+       "      <td>5.185</td>\n",
+       "      <td>38.505</td>\n",
+       "      <td>24.905</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.725</td>\n",
+       "      <td>2.355</td>\n",
+       "      <td>90.475</td>\n",
+       "      <td>28.385</td>\n",
+       "      <td>79.790</td>\n",
+       "      <td>11.335</td>\n",
+       "      <td>15.015</td>\n",
+       "      <td>41.585</td>\n",
+       "      <td>36.3950</td>\n",
+       "      <td>24.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-09</th>\n",
+       "      <td>30.375</td>\n",
+       "      <td>39.155</td>\n",
+       "      <td>33.205</td>\n",
+       "      <td>10.145</td>\n",
+       "      <td>18.455</td>\n",
+       "      <td>66.395</td>\n",
+       "      <td>32.020</td>\n",
+       "      <td>5.445</td>\n",
+       "      <td>41.435</td>\n",
+       "      <td>24.585</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.415</td>\n",
+       "      <td>2.385</td>\n",
+       "      <td>89.310</td>\n",
+       "      <td>28.795</td>\n",
+       "      <td>78.885</td>\n",
+       "      <td>11.215</td>\n",
+       "      <td>15.930</td>\n",
+       "      <td>40.605</td>\n",
+       "      <td>36.1575</td>\n",
+       "      <td>25.135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 116 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               AAN     AER      AL    AMBR     AMN    ANET    ASGN   ATEN  \\\n",
+       "date                                                                        \n",
+       "2015-01-02  30.615  38.515  34.380  10.155  19.225  62.655  32.505  4.535   \n",
+       "2015-01-05  30.505  38.255  33.475  10.010  18.925  63.835  31.990  4.370   \n",
+       "2015-01-06  29.335  38.235  33.505  10.070  18.435  63.790  31.275  4.565   \n",
+       "2015-01-07  30.245  38.605  33.445   9.835  18.640  65.110  32.105  4.565   \n",
+       "2015-01-08  30.755  39.525  34.180   9.955  18.535  66.070  32.615  5.185   \n",
+       "2015-01-09  30.375  39.155  33.205  10.145  18.455  66.395  32.020  5.445   \n",
+       "\n",
+       "              ATHM     ATU   ...       UIS    UMC      URI    VEEV     VMW  \\\n",
+       "date                         ...                                             \n",
+       "2015-01-02  37.755  27.155   ...    28.895  2.245  103.585  26.205  82.075   \n",
+       "2015-01-05  37.040  26.275   ...    28.095  2.295   92.245  26.220  81.010   \n",
+       "2015-01-06  35.905  25.745   ...    27.055  2.235   89.375  27.125  78.815   \n",
+       "2015-01-07  38.890  25.285   ...    27.335  2.265   88.735  27.180  78.835   \n",
+       "2015-01-08  38.505  24.905   ...    27.725  2.355   90.475  28.385  79.790   \n",
+       "2015-01-09  41.435  24.585   ...    27.415  2.385   89.310  28.795  78.885   \n",
+       "\n",
+       "               WIT      WK    WUBA      XRX     ZEN  \n",
+       "date                                                 \n",
+       "2015-01-02  11.345  13.585  41.915  36.2350  24.540  \n",
+       "2015-01-05  11.205  13.990  42.510  35.4725  24.055  \n",
+       "2015-01-06  11.035  13.955  40.585  34.9450  24.530  \n",
+       "2015-01-07  11.165  14.230  40.480  35.3925  24.520  \n",
+       "2015-01-08  11.335  15.015  41.585  36.3950  24.995  \n",
+       "2015-01-09  11.215  15.930  40.605  36.1575  25.135  \n",
+       "\n",
+       "[6 rows x 116 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GSTools.get_aggregated_with_dates(data, col='close').set_index(\"date\").loc[\"2015-01-02\":\"2015-01-10\"]"
    ]
   },
   {
@@ -859,9 +1122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Intel, 2018 update 2)",
+   "display_name": "Python 3 (Intel, 2019 update 2)",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_2018u2"
+   "name": "c009-intel_distribution_of_python_3_2019u2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -873,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
