grid search working

--- a/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
+++ b/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# INPUT PARAMETERS\n",
@@ -89,7 +91,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CONFIG = {\n",
@@ -510,7 +514,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# with open(\"../backtest-results/distance/fyp-progress-y1/\" + 'results.tex','w') as tf:\n",
@@ -844,9 +850,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Intel, 2019 update 2)",
+   "display_name": "Python (traders_nlp)",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_2019u2"
+   "name": "traders_nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -858,7 +864,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
