--- a/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
+++ b/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from grid_search_tools import GSTools\n",
@@ -30,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# INPUT PARAMETERS\n",
@@ -65,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CONFIG = {\n",
@@ -746,9 +752,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Intel, 2019 update 2)",
+   "display_name": "Python (traders_nlp)",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_2019u2"
+   "name": "traders_nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -760,7 +766,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
