--- a/demo-layout/client-demo.ipynb
+++ b/demo-layout/client-demo.ipynb
@@ -2,7 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../jupyter-py/\")\n",
+    "from decode_logs import *\n",
+    "sys.path.pop()\n",
+    "\n",
+    "output_dir = \"../jupyter-py/output/\" + get_current_time()\n",
+    "strategy_type = \"kalman\"\n",
+    "execution_command = \"python ../jupyter-py/backtest_pair.py --strategy_type {} --output_dir {}\".format(strategy_type, output_dir)\n",
+    "\n",
+    "os.system(\"rm -rf ../jupyter-py/output\")\n",
+    "os.system(execution_command)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = Decoder.get_strategy_status(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +335,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show(spread_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -305,6 +355,18 @@
    "display_name": "Python [conda env:fyp]",
    "language": "python",
    "name": "conda-env-fyp-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
